# mksbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  base_functions.py  config-template.yaml  misc_functions.py  mksbot_main.py  pyproject.toml  reddit.py  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: mksbot.yml
cogs/: amusement.py  amusement_fun.py  reddit.py  reddit_fun.py  streamable.py  voice.py
cogs/amusement/: amusement.py  amusement_fun.py
cogs/reddit/: reddit.py  reddit_fun.py
cogs/voice/: voice.py  voice_config.yml  voice_fun.py
mksbot/audio/: tempo_adj.sh
mksbot/cogs/amusement/: amusement_fun.py
mksbot/cogs/reddit/: reddit.py  reddit_fun.py
mksbot/cogs/voice/: voice_fun.py
src/mksbot/: base_functions.py  main.py
src/mksbot/cogs/amusement/: amusement.py  amusement_fun.py
src/mksbot/cogs/reddit/: reddit.py  reddit_fun.py
src/mksbot/cogs/voice/: streamable.py  voice.py  voice_config.yml  voice_fun.py
testing/: timing.py
tests/mksbot/: test_main.py
