[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name= "mksbot"
authors = [{name="utlandr"}]
description = "Custom Discord Bot"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "requests",
    "discord",
    "emoji",
    "google-api-python-client",
    "praw",
    "pyyaml",
    "youtube-dl",
]

[tool.setuptools_scm]

[project.scripts]
start-mksbot = "mksbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
mksbot = ["py.typed"]
