[build-system]
requires = ["hatch"]
build-backend = "hatchling.build"

[project]
name= "mksbot"
authors = [
  { name="utlandr", email="rlpp.bell@gmail.com" },
]
description = "Custom Discord Bot"
readme =  "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "requests",
    "discord",
    "emoji",
    "google-api-python-client",
    "praw",
    "pyyaml",
    "youtube-dl",
]

[project.scripts]
start-mksbot = "mksbot.main:main"

[tool.hatch.version]
path = "src/mksbot/__about__.py"
